# GroceryMadeEasy

./: CMakeLists.txt  README.md  cartdb.csv  categories.txt  items.txt  main.cpp  usersdb.csv
raylib/4.5.0/: INSTALL_RECEIPT.json
raylib/4.5.0/.brew/: raylib.rb
raylib/4.5.0/lib/: libraylib.4.2.0.dylib  libraylib.dylib
raylib/4.5.0/lib/pkgconfig/: raylib.pc
raylib/5.0/: INSTALL_RECEIPT.json
raylib/5.0/.brew/: raylib.rb
